-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.7.0, Lustre 2.8.0
-
None
-
3
-
9223372036854775807
Seen on Lustre 2.7.0.
While create a 128 MDT filesystem, I noticed that clients sometimes take a long time to connect to new MDTs after they've been added. I saw a lot of these messages on a client's console:
Jun 12 00:08:13 client00 kernel: LustreError: 1275:0:(fld_request.c:170:fld_client_add_target()) Skipped 12 previous similar messages Jun 12 00:08:13 client00 kernel: Lustre: 1275:0:(lmv_obd.c:300:lmv_init_ea_size()) scratch-clilmv-ffff880772a0ec00: NULL export for 11 Jun 12 00:08:13 client00 kernel: Lustre: 1275:0:(lmv_obd.c:300:lmv_init_ea_size()) Skipped 462 previous similar messages Jun 12 00:08:19 client00 kernel: LustreError: 1277:0:(fld_request.c:170:fld_client_add_target()) cli-scratch-clilmv-ffff880772a0ec00: Attempt to add target scratch-MDT0025-mdc-ffff880772a0ec00 (idx 37) on fly - skip it Jun 12 00:08:19 client00 kernel: LustreError: 1277:0:(fld_request.c:170:fld_client_add_target()) Skipped 13 previous similar messages Jun 12 00:08:19 client00 kernel: Lustre: 1277:0:(lmv_obd.c:300:lmv_init_ea_size()) scratch-clilmv-ffff880772a0ec00: NULL export for 12 Jun 12 00:08:19 client00 kernel: Lustre: 1277:0:(lmv_obd.c:300:lmv_init_ea_size()) Skipped 258 previous similar messages Jun 12 00:08:25 client00 kernel: Lustre: 1278:0:(lmv_obd.c:300:lmv_init_ea_size()) scratch-clilmv-ffff880772a0ec00: NULL export for 13 Jun 12 00:08:25 client00 kernel: Lustre: 1278:0:(lmv_obd.c:300:lmv_init_ea_size()) Skipped 56 previous similar messages Jun 12 00:08:25 client00 kernel: LustreError: 1278:0:(fld_request.c:170:fld_client_add_target()) cli-scratch-clilmv-ffff880772a0ec00: Attempt to add target scratch-MDT0027-mdc-ffff880772a0ec00 (idx 39) on fly - skip it Jun 12 00:08:25 client00 kernel: LustreError: 1278:0:(fld_request.c:170:fld_client_add_target()) Skipped 8 previous similar messages
Eventually the client did connect to all the MDTs, but took about ~20 minutes.