LU-6713 lmv: lock necessary part of lmv_add_target

Release lmv_init_mutex once the new target is added
into lmv_tgt_desc, so lmv_obd_connect will not be
serialized.

New target should be allowed to added to fld client
lists, so FLD can always choose new added target to
do the FLD lookup request, and also remove some noise
error messages in this process.

Change the MDT starts sequence in setupall, so it
will start MDT0, OST0, OST1...OSTn, client, then
MDT1, MDT2...MDTn, to match the popular use pattern.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: I1aa2e31108f2da672b41e2a5c1c544605328ceea