lustre/fld/fld_internal.h
@@ -64,11 +64,6 @@
 #include <libcfs/libcfs.h>
 #include <lustre_fld.h>
 
-enum {
-        LUSTRE_FLD_INIT = 1 << 0,
-        LUSTRE_FLD_RUN  = 1 << 1
-};
-
 struct fld_stats {
         __u64   fst_count;
         __u64   fst_cache;
